--- a/index.html
+++ b/index.html
@@ -26,6 +26,28 @@
                 </div>
             </nav>
         </header>
+        <div class="hero_section_container">
+            <img 
+            src="./images/heroSectionLogo.png" 
+            alt="Zomato Logo"
+            class="hero_section_logo"
+            />
+            <h1 class="hero_section_title">
+                Deliver the best food & drinks in Kolkata
+            </h1>
+            <div class="hero_section_input_container">
+                <input 
+                type="text" 
+                class="input_container_location" 
+                placeholder="Action Area 1 , Newtown"
+                />
+                <input 
+                type="text" 
+                class="input_container_search"
+                placeholder="Search for a restaurant , cuisine or dish"
+                />
+            </div>
+        </div>
     </section>
 </body>
 </html>
