--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </header>
         <div class="hero_section_container">
             <img 
-            src="./images/heroSectionLogo.png" 
+            src="images/heroSectionLogo.png" 
             alt="Zomato Logo"
             class="hero_section_logo"
             />
