completed the footer section

--- a/index.html
+++ b/index.html
@@ -139,8 +139,62 @@
             </div>
         </div>
     </section>
-    <section class="">
-
-    </section>
+    <footer class=" footer">
+        <div class="footer_section1">
+            <img src="images/logo.png" alt="zomato logo" />
+            <div class="section_buttonContainer">
+                <button><img 
+                    src="https://flagcdn.com/w40/in.png"
+                    alt="India" 
+                    style="width:17px" />India
+                </button>
+                <button>
+                    <i class="fa fa-globe" aria-hidden="true"></i>English
+                </button>
+            </div>
+        </div>
+        
+        <div class="navigation_container">
+            <div class="link_container">
+                <h5> About Zomato</h5>
+                <a class="footer_link" href="#">who we are</a>
+                <a class="footer_link" href="#">Blogs</a>
+                <a class="footer_link" href="#">Work with us</a>
+                <a class="footer_link" href="#">Investor Relations</a>
+                <a class="footer_link" href="#">Report fraud</a>
+            </div>
+            <div class="link_container">
+                <h5>ZOMAVERSE</h5>
+                <a class="footer_link" href="#">Zomato</a>
+                <a class="footer_link" href="#">Feeding India</a>
+                <a class="footer_link" href="#">Hyperpure</a>
+                <a class="footer_link" href="#">Zomaland</a>
+            </div>
+            <div class="link_container">
+                <h5>For Restaurant</h5>
+                <a class="footer_link" href="#">Partner with us</a>
+                <a class="footer_link" href="#">App for You</a>
+                <br/>
+                <h5>For Enterprises</h5>
+                <a class="footer_link" href="#">Zomato for Work</a>
+            </div>
+            <div class="link_container">
+                <h5>Social Links</h5>
+                <div class="social_links_container">
+                    <button><i class="fa-brands fa-linkedin-in"></i></button>
+                    <button><i class="fa-brands fa-instagram"></i></button>
+                    <button><i class="fa-brands fa-x"></i></button>
+                    <button><i class="fa-brands fa-youtube"></i></button>
+                    <button><i class="fa-brands fa-facebook"></i></button>
+                </div>
+                <br/>
+                <img src="images/appleStore.png" alt="" class="footer_store_logos"/>
+                <img src="images/playStore.png" alt="" class="footer_store_logos">
+            </div>
+        </div>
+        <p class="disclaimer">
+            By continuing past this page, you agree to our Terms of Service, Cookie Policy, Privacy Policy and Content Policies. All trademarks are properties of their respective owners. 2021 © Zomato™ Pvt Ltd.
+        </p>
+    </footer>
 </body>
 </html>
